<resources>
    <string name="app_name">Titan Fit</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!--  Chip  Filters-->
    <string name="text_filter_1">STRETCHES</string>
    <string name="text_filter_2">BODY WEIGHT</string>
    <string name="text_filter_3">BARBELL</string>
    <string name="text_filter_4">DUMBBELLS</string>
    <string name="text_filter_5">CABLES</string>
    <string name="text_filter_6">KETTLEBELLS</string>
    <string name="text_filter_7">BAND</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="almonds_text">One ounce (28.35 grams) of almonds provides 6 grams of protein.\nOther high protein nuts include pistachios, which deliver 5.73 grams per 1-ounce (28.35 gram) serving and cashews, which contain 4.34 grams of protein per 1-ounce (28.35-gram) serving.</string>
    <string name="cottageCheese_text">One cup (226 grams) of cottage cheese provides 28 grams of protein.\nOther high protein cheeses include cheddar cheese, which provides 3.96 grams of protein per 17-gram slice, and mozzarella, which provides 6.29 grams of protein per 1 ounce (28.35 grams).</string>
    <string name="greekYogurt_text">One 7-ounce (200-gram) container provides 19.9 grams.\n Other yogurt products that are high in protein include unsweetened low fat yogurt, which provides 11.9 grams of protein per 8-ounce (227-gram) container, and kefir, which provides 9.21 grams of protein per 1 cup (243 mL).</string>
    <string name="lentils_text">One hundred grams (about 1/2 cup) of cooked lentils provides 9.02 grams of protein.\nOther high protein legumes include chickpeas, which provide 7.05 grams of protein per 100 grams cooked, and black beans, which provide 8.86 grams of protein 100 grams cooked.</string>
    <string name="proteinpowder_text">Whey protein powder provides about 16.6 grams of protein per scoop (28.6 grams), while pea protein provides 15 grams of protein per scoop (20 grams).\nNote that the protein content per scoop differs between products, even when the scoop size is the same. Check the label of the products you’re interested in for their specific protein content.</string>
    <string name="pumpkinSeeds_text">A 1/4 cup (29.5 grams) of pumpkin seeds provides 8.8 grams of protein.\nOther high protein seeds include sunflower seeds, which provide 7.25 grams per 1/4-cup (35-gram) serving, and flax seeds, which provide 7.5 grams of protein per 1/4-cup (42-gram) serving.</string>

    <string name="hyperlink">I accept <a href="https://www.freeprivacypolicy.com/live/03291b18-5d39-4089-87ac-6eefa8dc9b3e">Terms and Conditions</a></string>



</resources>