<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.muscle.MuscleFragment">

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/filters"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingTop="30dp"
            android:paddingRight="15dp"
            android:paddingBottom="10dp"
            app:singleLine="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/filter_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/text_filter_1" />

            <com.google.android.material.chip.Chip
                android:id="@+id/filter_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/text_filter_2" />

            <com.google.android.material.chip.Chip
                android:id="@+id/filter_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/text_filter_3" />

            <com.google.android.material.chip.Chip
                android:id="@+id/filter_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/text_filter_4" />

            <com.google.android.material.chip.Chip
                android:id="@+id/filter_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/text_filter_5" />

            <com.google.android.material.chip.Chip
                android:id="@+id/filter_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/text_filter_6" />

            <com.google.android.material.chip.Chip
                android:id="@+id/filter_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/text_filter_7" />


        </com.google.android.material.chip.ChipGroup>

    </HorizontalScrollView>

    <ImageView
        android:id="@+id/body_image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView"
        android:src="@drawable/male_front"/>


</androidx.constraintlayout.widget.ConstraintLayout>